WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50477
REGRESSION(
r71934
): input event fires twice when editing text inside a text input.
https://bugs.webkit.org/show_bug.cgi?id=50477
Summary
REGRESSION(r71934): input event fires twice when editing text inside a text i...
Dimitri Glazkov (Google)
Reported
2010-12-03 13:07:12 PST
REGRESSION(
r71934
): input event fires twice when editing text inside a text input.
Attachments
Patch
(3.67 KB, patch)
2010-12-03 13:09 PST
,
Dimitri Glazkov (Google)
no flags
Details
Formatted Diff
Diff
Now with a better ChangeLog
(3.89 KB, patch)
2010-12-03 13:13 PST
,
Dimitri Glazkov (Google)
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2010-12-03 13:09:52 PST
Created
attachment 75532
[details]
Patch
Dimitri Glazkov (Google)
Comment 2
2010-12-03 13:10:32 PST
Comment on
attachment 75532
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=75532&action=review
> LayoutTests/fast/forms/text-input-event.html:44 > \ No newline at end of file
Ha. I forgot the newline again. I'll add upon landing.
Dimitri Glazkov (Google)
Comment 3
2010-12-03 13:13:21 PST
Created
attachment 75533
[details]
Now with a better ChangeLog
Darin Adler
Comment 4
2010-12-03 13:25:29 PST
Comment on
attachment 75533
[details]
Now with a better ChangeLog I’m not sure I completely understand our approach; seems more like we would not want the event to exit the shadow. This changes the timing of the input event too. It now happens earlier. Does that have any detectable side effects?
Dimitri Glazkov (Google)
Comment 5
2010-12-03 14:06:11 PST
(In reply to
comment #4
)
> (From update of
attachment 75533
[details]
) > I’m not sure I completely understand our approach; seems more like we would not want the event to exit the shadow. > > This changes the timing of the input event too. It now happens earlier. Does that have any detectable side effects?
It actually happens later now. InputElement::setValueFromRenderer is invoked from HTMLFormControlElementWithState::defaultEventHandler. However, both of these events are a response to the same specific webkitEditableContentChangedEvent, so there's really no perceptible difference in when they occur.
Dimitri Glazkov (Google)
Comment 6
2010-12-03 16:12:00 PST
Committed
r73319
: <
http://trac.webkit.org/changeset/73319
>
Dimitri Glazkov (Google)
Comment 7
2011-03-14 10:02:40 PDT
***
Bug 50476
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug